--- a/runner/.env.example
+++ b/runner/.env.example
@@ -1,4 +1,3 @@
 S3_BUCKET=replc
-AWS_ACCESS_KEY_ID=AKIA2T7POMFAFPSJSNGU
-AWS_SECRET_ACCESS_KEY=WUN62m//ovhY3VBVIEvN4jo43zPzTHOR2HTMqaPT
-S3_ENDPOINT=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
